# popsec

./: .gitignore  Cargo.toml  Makefile  README.md  popsec-daemon.sh  popsec-gtk.sh
daemon/: Cargo.toml
daemon/src/: main.rs
data/: popsec-daemon.conf
debian/: changelog  control  copyright  popsec-daemon.install  popsec-daemon.service  popsec-gtk.install
examples/: tpm2-totp-show.rs
gtk/: Cargo.toml
gtk/i18n/en/: popsec_gtk.ftl
gtk/src/: lib.rs  main.rs
src/: dbus.rs  lib.rs  tpm2_totp.rs
tpm2-totp-sys/: Cargo.toml  build.rs  wrapper.h
