[package]
name = "popsec-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cascade = "1.0.0"
glib = "0.14.8"
gtk = "0.14.3"
libhandy = "0.8.0"
i18n-embed = { version = "0.13.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.1"
once_cell = "1.8.0"
rust-embed = { version = "6.3.0", features = ["debug-embed"] }
