[package]
name = "popsec-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
cascade = "1.0.0"
chrono = "0.4"
gdk-pixbuf = "0.14.0"
glib = "0.14.8"
gio = "0.14.8"
gtk = "0.14.3"
i18n-embed = { version = "0.13.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.1"
libhandy = "0.8.0"
once_cell = "1.8.0"
popsec = { path = ".." }
qrcode = "0.12.0"
rust-embed = { version = "6.3.0", features = ["debug-embed"] }
sys-info = "0.9.1"
